--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
         .brand-logo {
             font-size: 2rem;
             font-weight: 800;
-            margin-bottom: 40px;
             color: #38b2ff;
             display: flex;
             justify-content: center;
             align-items: center;
+            margin-top: -189px
         }
 
         .brand-logo img {
@@ -1027,6 +1027,7 @@
 
             .brand-logo img {
                 width: 30%;
+                margin-top: 100px;
             }
 
             .section-title {
