landing hecha y organizada

--- a/index.html
+++ b/index.html
@@ -371,8 +371,7 @@
             </div>
         </div>
     </section>
-
-    <!-- Pricing Section -->
+   <!-- Pricing Section -->
     <section id="pricing" class="pricing-section">
         <div class="container">
             <div class="section-header">
@@ -381,58 +380,142 @@
                 <p class="section-description">Lifetime access to CEO Consulting LAB</p>
             </div>
 
-            <div class="pricing-carousel-container">
-                <div class="pricing-carousel-wrapper" id="pricingCarouselWrapper">
-                    <div class="pricing-slide">
-                        <div class="pricing-card">
-                            <div class="pricing-logo">
-                                <img src="imagenes/galeria21.png" alt="CEO Consulting Lab">
-                            </div>
-                            <h3 class="course-title">CEO Consulting Lab</h3>
-                            <div class="old-price">$1297</div>
-                            <div class="current-price">$57</div>
-                            <a href="https://buy.stripe.com/28E28q7UC9voeQicDvfYY00"
-                                class="cta-button">Take action</a>
+            <div class="pricing-grid">
+                <!-- Basic Plan -->
+                <div class="pricing-card">
+                    <div class="pricing-logo">
+                        <img src="imagenes/galeria21.png" alt="CEO Consulting Lab">
+                    </div>
+                    <div class="price-header">
+                        <div class="price">$57</div>
+                        <div class="price-label">USD</div>
+                    </div>
 
-                            <div class="member-avatars">
-                                <div class="avatar"></div>
-                                <div class="avatar"></div>
-                                <div class="avatar"></div>
-                                <div class="avatar"></div>
+                    <div class="what-you-get">💣 WHAT YOU GET:</div>
+
+                    <ul class="module-list">
+                        <li class="module-item">
+                            <div class="module-icon red"></div>
+                            <div>
+                                <div class="module-title">MODULE 1</div>
+                                <div class="module-description">How to recruit & close high-potential models — even if you're starting from zero.</div>
                             </div>
-                            <p class="member-count">Join over <strong>1,100</strong> members today</p>
+                        </li>
+                        <li class="module-item">
+                            <div class="module-icon orange"></div>
+                            <div>
+                                <div class="module-title">MODULE 2</div>
+                                <div class="module-description">Blow up your model's socials with viral growth strategies (IG, TikTok, X).</div>
+                            </div>
+                        </li>
+                        <li class="module-item">
+                            <div class="module-icon yellow"></div>
+                            <div>
+                                <div class="module-title">MODULE 3</div>
+                                <div class="module-description">Chat & sales systems to turn fans into $$$ — without selling just content.</div>
+                            </div>
+                        </li>
+                        <li class="module-item">
+                            <div class="module-icon green"></div>
+                            <div>
+                                <div class="module-title">MODULE 4</div>
+                                <div class="module-description">Automate & scale: Build your team and systems like a real CEO.</div>
+                            </div>
+                        </li>
+                    </ul>
+
+                    <div class="separator"></div>
+
+                    <div class="module-item">
+                        <div class="module-icon blue"></div>
+                        <div>
+                            <div class="module-title">+ 3 MORE MODULES</div>
+                            <div class="module-description">(💬 Private Sales | 💵 Payments & Legal | ⚙️ Advanced Systems)</div>
                         </div>
                     </div>
 
-                    <div class="pricing-slide">
-                        <div class="pricing-card">
-                            <div class="pricing-logo">
-                                <img src="imagenes/galeria60.png" alt="CEO Consulting Lab Pro">
-                            </div>
-                            <h3 class="course-title">CEO Consulting Lab Pro</h3>
-                            <div class="old-price">$1500</div>
-                            <div class="current-price">$97</div>
-                            <a href="https://buy.stripe.com/7sY7sKgr8cHA5fIgTLfYY01"
-                                class="cta-button">Take action</a>
+                    <div class="separator"></div>
 
-                            <div class="member-avatars">
-                                <div class="avatar"></div>
-                                <div class="avatar"></div>
-                                <div class="avatar"></div>
-                                <div class="avatar"></div>
-                            </div>
-                            <p class="member-count">Join over <strong>1,100</strong> members today</p>
-                        </div>
+                    <div class="bonus-section">
+                        <div class="bonus-title">🎁 BONUSES:</div>
+                        <div class="bonus-item">Recruitment checklists</div>
+                        <div class="bonus-item">Real closing scripts</div>
+                        <div class="bonus-item">Lifetime access</div>
+                        <div class="bonus-item">+10 INFO SOPS (best strategies and structure)</div>
                     </div>
+
+                    <a href="https://buy.stripe.com/28E28q7UC9voeQicDvfYY00" class="cta-button">Take action</a>
+
+                    <div class="member-avatars">
+                        <div class="avatar"></div>
+                        <div class="avatar"></div>
+                        <div class="avatar"></div>
+                        <div class="avatar"></div>
+                    </div>
+                    <p class="member-count">Join over <strong>1,100</strong> members today</p>
                 </div>
 
-                <div class="pricing-nav">
-                    <button class="pricing-btn" id="pricingPrevBtn"><i class="fas fa-chevron-left"></i></button>
-                    <div class="pricing-indicators">
-                        <div class="pricing-indicator active" data-slide="0"></div>
-                        <div class="pricing-indicator" data-slide="1"></div>
+                <!-- Pro Plan -->
+                <div class="pricing-card">
+                    <div class="pro-badge">PRO</div>
+                    <div class="pricing-logo">
+                        <img src="imagenes/galeria60.png" alt="CEO Consulting Lab Pro">
                     </div>
-                    <button class="pricing-btn" id="pricingNextBtn"><i class="fas fa-chevron-right"></i></button>
+                    <div class="price-header">
+                        <div class="price">$97</div>
+                        <div class="price-label">USD</div>
+                    </div>
+
+                    <div class="what-you-get">💼 EVERYTHING INCLUDED IN CEO MODEL SYSTEM ($57):</div>
+
+                    <ul class="module-list">
+                        <li class="bonus-item">How to recruit & manage models</li>
+                        <li class="bonus-item">Viral growth on IG, TikTok, X</li>
+                        <li class="bonus-item">Chat & sales systems</li>
+                        <li class="bonus-item">Automated team building</li>
+                        <li class="bonus-item">+3 extra modules (Legal, Payments, Telegram)</li>
+                    </ul>
+
+                    <div class="separator"></div>
+
+                    <div class="bonus-section">
+                        <div class="bonus-title">💎 PLUS EXCLUSIVE BONUSES:</div>
+                        
+                        <div class="exclusive-content">
+                            <div class="exclusive-item">
+                                <div class="exclusive-title">🔹 Affiliate training at the next level</div>
+                                <div class="exclusive-description">Learn how to promote high-ticket offers that actually convert — even if you have no audience.</div>
+                            </div>
+                            <div class="exclusive-item">
+                                <div class="exclusive-title">🔹 Access to my private client pool</div>
+                                <div class="exclusive-description">You'll get priority to resell my programs and earn 20–50% commissions.</div>
+                            </div>
+                            <div class="exclusive-item">
+                                <div class="exclusive-title">🔹 Work with me directly</div>
+                                <div class="exclusive-description">Get real-time feedback, support, and guidance to close your first clients.</div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="separator"></div>
+
+                    <div class="highlight-text">
+                        📈 This is the fastest way to monetize skills online and build digital income in the USA.
+                    </div>
+
+                    <div class="payment-info">
+                        💰 One-time payment | Instant Access | Limited Spots
+                    </div>
+
+                    <a href="https://buy.stripe.com/7sY7sKgr8cHA5fIgTLfYY01" class="cta-button">Take action</a>
+
+                    <div class="member-avatars">
+                        <div class="avatar"></div>
+                        <div class="avatar"></div>
+                        <div class="avatar"></div>
+                        <div class="avatar"></div>
+                    </div>
+                    <p class="member-count">Join over <strong>1,100</strong> members today</p>
                 </div>
             </div>
 
@@ -444,7 +527,6 @@
             </div>
         </div>
     </section>
-
     <!-- One Year Section -->
     <section class="content-section">
         <div class="container">
