--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
                 <div class="urgent-message" id="urgentMessage" style="display: none;">
                     <i class="fas fa-exclamation-triangle"></i>
-                    LAST CHANCE! Don’t miss this unique opportunity.
+                    LAST CHANCE! Don't miss this unique opportunity.
                 </div>
 
                 <div class="expired-message" id="expiredMessage" style="display: none;">
@@ -116,13 +116,13 @@
                             <p class="phase-description">Build your agency's foundation and start strong from day one.
                             </p>
                             <ul class="phase-features">
-                                <li>Business Structured Like a CEO – Learn how to organize your Drive and your processes
+                                <li>Business Structured Like a CEO — Learn how to organize your Drive and your processes
                                     so that your agency is ready to scale without chaos.</li>
-                                <li>Profile that Attracts Models 24/7 – Set up your branding and social media so that
+                                <li>Profile that Attracts Models 24/7 — Set up your branding and social media so that
                                     models want to work with you.</li>
-                                <li>Smart Recruitment – The best sources and strategies for finding models predictably
+                                <li>Smart Recruitment — The best sources and strategies for finding models predictably
                                     and without wasting time.</li>
-                                <li>Automatic Closing – Proven scripts and messages to convert prospects into contracts
+                                <li>Automatic Closing — Proven scripts and messages to convert prospects into contracts
                                     quickly and easily.</li>
                             </ul>
                         </div>
@@ -138,13 +138,13 @@
                             <p class="phase-description">Go from beginner mode to having a growth system designed to
                                 win.</p>
                             <ul class="phase-features">
-                                <li>Step-by-Step Action Plan – Organize your calendar, set clear goals, and build a
+                                <li>Step-by-Step Action Plan — Organize your calendar, set clear goals, and build a
                                     content plan that attracts clients.</li>
-                                <li>Positioning in Key Markets – Learn how to make your profile reach U.S. audiences and
+                                <li>Positioning in Key Markets — Learn how to make your profile reach U.S. audiences and
                                     other Tier 1 countries.</li>
-                                <li>Real Growth Strategies – Master methods like follow/unfollow, funnels, and tactics
+                                <li>Real Growth Strategies — Master methods like follow/unfollow, funnels, and tactics
                                     to scale quickly.</li>
-                                <li>Optimize & Repurpose Content – Turn every post into multiple pieces and keep your
+                                <li>Optimize & Repurpose Content — Turn every post into multiple pieces and keep your
                                     brand visible every single day automated.</li>
                             </ul>
                         </div>
@@ -160,13 +160,13 @@
                             <p class="phase-description">Turn every message into money and scale your income
                                 predictably.</p>
                             <ul class="phase-features">
-                                <li>Client Psychology – Learn how to identify client types and talk to them in a way
+                                <li>Client Psychology — Learn how to identify client types and talk to them in a way
                                     that makes them buy more.</li>
-                                <li>Sales Sequences & Upsells – Ready-to-use scripts to sell content, upsells, and
+                                <li>Sales Sequences & Upsells — Ready-to-use scripts to sell content, upsells, and
                                     personalized offers without sounding repetitive.</li>
-                                <li>Fan Activation & Retention – Strategies to bring back old clients and keep new ones
+                                <li>Fan Activation & Retention — Strategies to bring back old clients and keep new ones
                                     spending more time and money.</li>
-                                <li>Professional Chat Rules & System – A structure to organize your team and guarantee
+                                <li>Professional Chat Rules & System — A structure to organize your team and guarantee
                                     consistent results.</li>
                             </ul>
                         </div>
@@ -182,13 +182,13 @@
                             <p class="phase-description">Build a business that runs without you and makes money even
                                 when you're not working.</p>
                             <ul class="phase-features">
-                                <li>Find & Hire the Best – Learn where to look, how to filter, and select the ideal
+                                <li>Find & Hire the Best — Learn where to look, how to filter, and select the ideal
                                     people for each role in your agency.</li>
-                                <li>Step-by-Step Onboarding System – A complete guide to train your team and get them
+                                <li>Step-by-Step Onboarding System — A complete guide to train your team and get them
                                     ready to operate in less than a week.</li>
-                                <li>Organize & Scale Without Chaos – Keep everything centralized (Drive + Discord) so
+                                <li>Organize & Scale Without Chaos — Keep everything centralized (Drive + Discord) so
                                     nothing gets lost and communication stays clear.</li>
-                                <li>Automated Workflows – Ready-to-delegate processes that let your team run on
+                                <li>Automated Workflows — Ready-to-delegate processes that let your team run on
                                     autopilot while you focus on scaling.</li>
                             </ul>
                         </div>
@@ -391,7 +391,7 @@
                         <div class="price-label">USD</div>
                     </div>
 
-                    <div class="what-you-get">💣 WHAT YOU GET:</div>
+                    <div class="what-you-get">WHAT YOU GET:</div>
 
                     <ul class="module-list">
                         <li class="module-item">
@@ -412,7 +412,7 @@
                             <div class="module-icon yellow"></div>
                             <div>
                                 <div class="module-title">MODULE 3</div>
-                                <div class="module-description">Chat & sales systems to turn fans into $$$ — without selling just content.</div>
+                                <div class="module-description">Chat & sales systems to turn fans into $$ — without selling just content.</div>
                             </div>
                         </li>
                         <li class="module-item">
@@ -430,14 +430,14 @@
                         <div class="module-icon blue"></div>
                         <div>
                             <div class="module-title">+ 3 MORE MODULES</div>
-                            <div class="module-description">(💬 Private Sales | 💵 Payments & Legal | ⚙️ Advanced Systems)</div>
+                            <div class="module-description">(Private Sales | Payments & Legal | Advanced Systems)</div>
                         </div>
                     </div>
 
                     <div class="separator"></div>
 
                     <div class="bonus-section">
-                        <div class="bonus-title">🎁 BONUSES:</div>
+                        <div class="bonus-title">BONUSES:</div>
                         <div class="bonus-item">Recruitment checklists</div>
                         <div class="bonus-item">Real closing scripts</div>
                         <div class="bonus-item">Lifetime access</div>
@@ -466,7 +466,7 @@
                         <div class="price-label">USD</div>
                     </div>
 
-                    <div class="what-you-get">💼 EVERYTHING INCLUDED IN CEO MODEL SYSTEM ($57):</div>
+                    <div class="what-you-get">EVERYTHING INCLUDED IN CEO MODEL SYSTEM ($57):</div>
 
                     <ul class="module-list">
                         <li class="bonus-item">How to recruit & manage models</li>
@@ -479,19 +479,19 @@
                     <div class="separator"></div>
 
                     <div class="bonus-section">
-                        <div class="bonus-title">💎 PLUS EXCLUSIVE BONUSES:</div>
+                        <div class="bonus-title">PLUS EXCLUSIVE BONUSES:</div>
                         
                         <div class="exclusive-content">
                             <div class="exclusive-item">
-                                <div class="exclusive-title">🔹 Affiliate training at the next level</div>
+                                <div class="exclusive-title">Affiliate training at the next level</div>
                                 <div class="exclusive-description">Learn how to promote high-ticket offers that actually convert — even if you have no audience.</div>
                             </div>
                             <div class="exclusive-item">
-                                <div class="exclusive-title">🔹 Access to my private client pool</div>
-                                <div class="exclusive-description">You'll get priority to resell my programs and earn 20–50% commissions.</div>
+                                <div class="exclusive-title">Access to my private client pool</div>
+                                <div class="exclusive-description">You'll get priority to resell my programs and earn 20—50% commissions.</div>
                             </div>
                             <div class="exclusive-item">
-                                <div class="exclusive-title">🔹 Work with me directly</div>
+                                <div class="exclusive-title">Work with me directly</div>
                                 <div class="exclusive-description">Get real-time feedback, support, and guidance to close your first clients.</div>
                             </div>
                         </div>
@@ -500,11 +500,11 @@
                     <div class="separator"></div>
 
                     <div class="highlight-text">
-                        📈 This is the fastest way to monetize skills online and build digital income in the USA.
+                        This is the fastest way to monetize skills online and build digital income in the USA.
                     </div>
 
                     <div class="payment-info">
-                        💰 One-time payment | Instant Access | Limited Spots
+                        One-time payment | Instant Access | Limited Spots
                     </div>
 
                     <a href="https://buy.stripe.com/7sY7sKgr8cHA5fIgTLfYY01" class="cta-button">Take action</a>
