cambios ultimos landing

--- a/index.html
+++ b/index.html
@@ -555,20 +555,20 @@
             <div class="section-header">
                 <h3>Or do nothing.</h3>
                 <p>Keep watching us win. Get a 9-to-5 job.</p>
-                <div class="section-subtitle"><i class="fas fa-clock" style="margin-right: 8px;"></i>Bonos premium</div>
+                <div class="section-subtitle">Bonus premium</div>
                 <p>In case I haven't convinced you 100% yet, here are some bonuses that will make this offer even more
                     attractive if you join today.</p>
             </div>
 
             <div class="bonus-item">
-                <div class="bonus-title"><i class="fas fa-gift" style="margin-right: 8px;"></i>Bono #1</div>
+                <div class="bonus-title">Bonus</div>
                 <p>The method that allows members to sign up creators within 12/24 hours...</p>
                 <p>You probably know that a week-old agency account does not inspire confidence. Discover the exact
                     method program members use to sign their first contracts in less than a day.</p>
             </div>
 
             <div class="bonus-item">
-                <div class="bonus-title"><i class="fas fa-gift" style="margin-right: 8px;"></i>Bono #2</div>
+                <div class="bonus-title">Bonus</div>
                 <p>+10 SOPs in Notion</p>
                 <p>From viral marketing strategies, automations, onboarding... everything I use personally</p>
             </div>
